# java-simple-serial-connector

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt  build.gradle  pom.xml  settings.gradle
.github/workflows/: build.yml  cross-compile.yml  release-new-version.yml
ant/: build.xml
gradle/wrapper/: gradle-wrapper.properties
src/assembly/: one-off-jar.xml
src/cpp/: Makefile  README.make  jssc_SerialNativeInterface.h
src/cpp/_nix_based/: Makefile  jssc.cpp
src/cpp/windows/: jssc.c++  jssc.cpp  jssc_win.h
src/java/jssc/: SerialInputStream.java  SerialNativeInterface.java  SerialOutputStream.java  SerialPort.java  SerialPortEvent.java  SerialPortEventListener.java  SerialPortException.java  SerialPortList.java  SerialPortTimeoutException.java
src/java/libs/mac_os_x/: libjSSC-0.9_ppc.jnilib  libjSSC-0.9_ppc64.jnilib  libjSSC-0.9_x86.jnilib  libjSSC-0.9_x86_64.jnilib  libjSSC-2.4_ppc.jnilib  libjSSC-2.4_ppc64.jnilib  libjSSC-2.4_x86.jnilib  libjSSC-2.4_x86_64.jnilib  libjSSC-2.5_ppc.jnilib  libjSSC-2.5_ppc64.jnilib  libjSSC-2.5_x86.jnilib  libjSSC-2.5_x86_64.jnilib  libjSSC-2.6_ppc.jnilib  libjSSC-2.6_ppc64.jnilib  libjSSC-2.6_universal.jnilib  libjSSC-2.6_x86.jnilib  libjSSC-2.6_x86_64.jnilib  libjSSC-2.7_ppc.jnilib  libjSSC-2.7_ppc64.jnilib  libjSSC-2.7_x86.jnilib  libjSSC-2.7_x86_64.jnilib  libjSSC-2.8_universal.jnilib
src/main/cpp/: jssc_SerialNativeInterface.h  version.h.in
src/main/cpp/_nix_based/: jssc.cpp
src/main/cpp/windows/: jssc.cpp
src/main/java/jssc/: DefaultJniExtractorStub.java  SerialNativeAccess.java  SerialNativeInterface.java  SerialPort.java  SerialPortEvent.java  SerialPortEventListener.java  SerialPortException.java  SerialPortList.java  SerialPortTimeoutException.java
src/main/java/org/scream3r/jssc/: SerialPort.java  SerialPortEvent.java  SerialPortEventListener.java  SerialPortException.java  SerialPortList.java  SerialPortTimeoutException.java
src/main/module-info/: module-info.java
src/main/resources-precompiled/: README.md
src/main/resources-precompiled/natives/osx_64/: libjssc.dylib
src/main/resources-precompiled/natives/osx_arm64/: libjssc.dylib
src/test/java/jssc/: SerialNativeInterfaceTest.java  VirtualPortTest.java
src/test/java/jssc/bootpath/: ManualBootLibraryPathFailedTest.java  ManualBootLibraryPathTest.java
src/test/java/jssc/junit/rules/: BackgroundProcess.java  VirtualPortRule.java
src/test/java/org/scream3r/jssc/: TestSerialPortList.java  TestSerialPortRead.java  TestSerialPortWrite.java
toolchain/: Aarch64.cmake  Armhf.cmake  Armsf.cmake  Dockcross.cmake  Mingw32.cmake  Mingw64.cmake  MingwAarch64.cmake  Ppc64.cmake
